force-app/main/default/objects/last6MonthQuotePSS__c/last6MonthQuotePSS__c.object-meta.xml
<CustomObject>
    <label>last6MonthQuotePSS</label>
    <nameField>
        <label>last6MonthQuotePSS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>last6MonthQuotePSS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>