force-app/main/default/objects/last6MonthQuotePSS__c/fields/Base_Discount__c.field-meta.xml
<CustomField>
    <fullName>Base_Discount__c</fullName>
    <label>Base Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>