force-app/main/default/objects/last6MonthQuotePSS__c/fields/final_total_expert_target_floor__c.field-meta.xml
<CustomField>
    <fullName>final_total_expert_target_floor__c</fullName>
    <label>final total expert-target-floor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>