force-app/main/default/objects/last6MonthQuotePSS__c/fields/hasGuidance__c.field-meta.xml
<CustomField>
    <fullName>hasGuidance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasGuidance</label>
    <type>Checkbox</type>
</CustomField>