force-app/main/default/objects/last6MonthQuotePSS__c/fields/historic_net_unit_price__c.field-meta.xml
<CustomField>
    <fullName>historic_net_unit_price__c</fullName>
    <label>historic net unit price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>