force-app/main/default/objects/last6MonthQuotePSS__c/fields/New_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_ID__c</fullName>
    <label>New Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>