force-app/main/default/objects/last6MonthQuotePSS__c/fields/Original_Quote_volume_Bkt__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_volume_Bkt__c</fullName>
    <label>Original Quote volume Bkt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>