force-app/main/default/objects/last6MonthQuotePSS__c/fields/Partner_tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_tier__c</fullName>
    <label>Partner-tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>