force-app/main/default/objects/last6MonthQuotePSS__c/fields/Quanity__c.field-meta.xml
<CustomField>
    <fullName>Quanity__c</fullName>
    <label>Quanity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>