force-app/main/default/objects/last6MonthQuotePSS__c/fields/RAW_expert_target_floor__c.field-meta.xml
<CustomField>
    <fullName>RAW_expert_target_floor__c</fullName>
    <label>RAW expert-target-floor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>